styles/main.scss
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Red+Hat+Display:wght@400;700&display=swap");

@import "./normalize";
@import "./mixins";
@import "./variables";
@import "./themes";
@import "./toasters";

@import "./inputNumberArrows";
@import "./switchButton";
@import "./currencyChanger";
@import "./selects";

@import "./animations";
@import "./icons";
@import "./buttons";
@import "./tooltip";
@import "./walletAdapter";
@import "./layout";
@import "./layoutTop";
@import "./mobile/menuShowButton";
@import "./userToolbox";
@import "./filter";
@import "./blobLoader";
@import "./footer/footer";
@import "./showOnHover";
@import "./solscanExplorer";
@import "./popups";
@import "./circularProgressBar";
@import "./circleLoader";

@import "./singleOffer/header";
@import "./singleOffer/offer";
@import "./singleOffer/page";

@import "./offerItemWrap";
@import "./offerTemplate";

@import "./offersPage/offersTop";
@import "./offersPage/offersGrid";
@import "./offersPage/offersTable";
@import "./offersPage/offersPagination";

@import "./myOffers/myOffersTop";
@import "./myOffers/myOffersWrap";

@import "./profilePage/header";
@import "./profilePage/page";
@import "./profilePage/stakerow";
@import "./profilePage/create";

@import "./lightboxBase";
@import "./NFTCollateral";
@import "./createLoan";
@import "./loanDetails";
@import "./confirmLoan";
@import "./connectWallet";
@import "./singleOffer/lendConfirmation";
@import "./singleOffer/acceptOffer";

@import "./mobile/footerMobile";
@import "./mobile/layoutTopMobile";
@import "./mobile/offersPage/offersTopMobile";
@import "./mobile/offersPage/offersGridMobile";
@import "./mobile/lightboxBaseMobile";
@import "./mobile/acceptOfferMobile";

body {
  @include theme-aware("background-color", "color-background");
  @include theme-aware("background-image", "bg-gradient-home");
  @include theme-aware("color", "text-primary-color");
  // background-size: 100vw 100vh;
  font-family: "Red Hat Display", sans-serif;
  background-attachment: fixed;
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  width: 100%;
  transition: background-color 0.8s ease-in-out;
}

* {
  box-sizing: border-box;
}

.devnet-container {
  width: 100%;
  margin: 0 auto;
  padding-top: $mr-lg;

  @media (max-width: $bp-tablet) {
    display: none;
  }

  @media (max-width: $bp-tablet) {
    width: 100vw;
  }

  .devnet {
    @include theme-aware("color", "color-white");
    @include theme-aware("background-color", "color-primary");
    display: inline-flex;
    align-items: center;
    border-radius: 12px;
    padding: 0 $mr-xl;

    i {
      margin-left: -25px;
    }
  }
}

.home-bg-top,
.home-bg-bottom {
  position: fixed;
  background-repeat: no-repeat;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: -1;
  transition: background 0.8s ease-in-out;
}

.home-bg-bottom {
  @include theme-aware("background-image", "bg-home-bottom");
  background-position: bottom left;
}

.home-bg-top {
  @include theme-aware("background-image", "bg-home");
  background-position: top right;
}

.theme-light {
  .home-bg-top {
    background-size: 30%;
  }

  .home-bg-bottom {
    background-size: 25%;
  }
}

.theme-dark {
  .home-bg-top {
    background-size: 30%;
  }

  .home-bg-bottom {
    background-size: 25%;
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  @include theme-aware("color", "color-content");
}

a {
  @include theme-aware("color", "color-content");
  transition: color 0.5s;
}

@media (min-width: $bp-tablet) {
  .mobile-only {
    display: none;
  }
}

@media (max-width: $bp-tablet) {
  .theme-light {
    .home-bg-top {
      background-size: 60%;
    }

    .home-bg-bottom {
      background-size: 50%;
    }
  }

  .theme-dark {
    .home-bg-top {
      background-size: 60%;
    }

    .home-bg-bottom {
      background-size: 50%;
    }
  }
}

.overflow-hidden {
  overflow: hidden;
}

.no-offers {
  width: 100%;
  text-align: center;
  margin: 80px 0;
}

@keyframes pulse {
  50% {
    opacity: 0.5;
  }
}

